<resources>
    <string name="app_name">CourtCounter</string>
    <string name="teama">Team A</string>
    <string name="team_a">Team A</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="zero">0</string>
    <string name="_0">0</string>
    <string name="scoreA">0</string>
    <string name="team_b">Team B</string>
    <string name="scoreb">0</string>
    <string name="scorea">0</string>
    <string name="plusthree">+3 POINTS</string>
    <string name="plustwo">+2 POINTS</string>
    <string name="freethrow">FREE THROW</string>
    <string name="plusone">FREE THROW</string>
    <string name="reset">RESET</string>
</resources>
